Adição e configuração de rotas de gestão

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -10,7 +10,7 @@
                 </a>
             </li>
             <li class="bar-item">
-                <a href="/gestao/empresa">
+                <a href="/gestao">
                     GESTÃO
                 </a>
             </li>
